# Cryptopals

./: README.md
c/: .gitignore  CMakeLists.txt  errors.h  generate-headers  linux-build  unit_tests.c  utils.c  utils.h
c/app/: CMakeLists.txt  cryptopals.c
c/codec/: CMakeLists.txt  codec.c
c/inc/codec/: b64lookup.h  codec.h  hexlookup.h
c/scripts/: b64lookup-h-gen  hexlookup-h-gen
c/test/: CMakeLists.txt  unit.c  unit_tests.c
python/: 1-1.py
scripts/: gen-rand-hex
